fix spacing for normal zoom

--- a/styles/shareddice.css
+++ b/styles/shareddice.css
@@ -65,5 +65,5 @@
     border: 1px solid var(--border-color); 
     border-radius: 8px;
     padding: 3px 6px;
-    left: 12.3vw;
+    left: 11.3vw;
 }
